fix(TAP-9294): Failed to retrieve update condition field for copying task